Added some testing, comments and a README file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.hibernate.ddl-auto= update
 # show queries on console
 spring.jpa.show-sql=true
 
+# setting up logging
+logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.file.path=.
